--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,3 @@
 <resources>
-    <string name="app_name">CameraXApp</string>
-    <string name="take_photo">Take Photo</string>
-    <string name="start_capture">Start Capture</string>
-    <string name="stop_capture">Stop Capture</string>
-    <string name="menu_settings">Settings</string>
+    <string name="app_name">Download URL</string>
 </resources>
