--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,5 @@
 <resources>
     <string name="app_name">RecyclerView</string>
-    <string name="plus_button">Plus button</string>
-    <string name="minus_button">Minus button</string>
-    <string name="night_mode">Night Mode</string>
-    <string name="day_mode">Day Mode</string>
-    <string name="texto">Texto</string>
-    <string name="title_activity_main2">MainActivity2</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="crear">Creación de un comentario nuevo</string>
+    <string name="seleccionar">Seleccione un comentario</string>
 </resources>
